04_services/ocis/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis-web
  labels:
    app.kubernetes.io/name: ocis-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ocis-web
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ocis-web
    spec:
      serviceAccountName: ocis
      volumes:
        - name: temp
          emptyDir:
            sizeLimit: 1G
      containers:
        - name: ocis-web
          image: owncloud/ocis
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 9200
            initialDelaySeconds: 3
            timeoutSeconds: 2
          readinessProbe:
            tcpSocket:
              port: 9200
            initialDelaySeconds: 3
          ports:
            - containerPort: 9200
              protocol: TCP
              name: web
#          securityContext:
#            capabilities:
#              drop:
#                - ALL
#            readOnlyRootFilesystem: true
#            runAsGroup: 65532
#            runAsNonRoot: true
#            runAsUser: 65532
          volumeMounts:
            - mountPath: /tmp
              name: temp
