04_services/ocis/base/servicemonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ocis-metrics
  labels:
    app.kubernetes.io/name: ocis-web
    app.kubernetes.io/component: ocis-metrics
spec:
  selector:
    app.kubernetes.io/name: ocis-web
  ports:
    - port: 9104
      protocol: TCP
      name: metrics-web
      targetPort: metrics-web
    - port: 9114
      protocol: TCP
      name: metrics-ocs
      targetPort: metrics-ocs
    - port: 9119
      protocol: TCP
      name: metrics-webdav
      targetPort: metrics-webdav
    - port: 9129
      protocol: TCP
      name: metrics-glauth
      targetPort: metrics-glauth
    - port: 9134
      protocol: TCP
      name: metrics-idp
      targetPort: metrics-idp
    - port: 9141
      protocol: TCP
      name: metrics-s-f # storage-frontend
      targetPort: metrics-s-f # storage-frontend
    - port: 9143
      protocol: TCP
      name: metrics-s-g # storage-gateway
      targetPort: metrics-s-g # storage-gateway
    - port: 9145
      protocol: TCP
      name: metrics-s-s # storage-sharing
      targetPort: metrics-s-s # storage-sharing
    - port: 9147
      protocol: TCP
      name: metrics-s-a-b # storage-auth-basic
      targetPort: metrics-s-a-b # storage-auth-basic
    - port: 9149
      protocol: TCP
      name: metrics-s-a-be # storage-auth-bearer
      targetPort: metrics-s-a-be # storage-auth-bearer
    - port: 9151
      protocol: TCP
      name: metrics-s-sh # storage-sharing
      targetPort: metrics-s-sh # storage-sharing
    - port: 9156
      protocol: TCP
      name: metrics-s-h # storage-home
      targetPort: metrics-s-h # storage-home
    - port: 9159
      protocol: TCP
      name: metrics-s-u # storage-users
      targetPort: metrics-s-u # storage-users
    - port: 9179
      protocol: TCP
      name: metrics-s-p-l # storage-public-link
      targetPort: metrics-s-p-l # storage-public-link
    - port: 9189
      protocol: TCP
      name: metrics-t # thumbnails
      targetPort: metrics-t # thumbnails
    - port: 9194
      protocol: TCP
      name: metrics-set # settings
      targetPort: metrics-set # settings
    - port: 9205
      protocol: TCP
      name: metrics-proxy
      targetPort: metrics-proxy
    - port: 9217
      protocol: TCP
      name: metrics-s-m # storage-metadata
      targetPort: metrics-s-m # storage-metadata
    - port: 9224
      protocol: TCP
      name: metrics-oo # onlyoffice
      targetPort: metrics-oo # onlyoffice
    - port: 9460
      protocol: TCP
      name: metrics-store
      targetPort: metrics-store
  type: ClusterIP
